--- a/account/templates/account/project.html
+++ b/account/templates/account/project.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+    {% block head %}
+    <title>Project</title>
+    {% endblock %}
+
+    {% block body %}
+    <h1> This is the home page of project section</h1>
+    {% endblock %}
