--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -20,7 +20,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-briefcase"></span> Project </a>
+      <a class="navbar-brand" href="/account/project"><span class="glyphicon glyphicon-briefcase"></span> Project </a>
     </div>
 
     <ul class="nav navbar-nav navbar-right">
