--- a/account/templates/account/controls.html
+++ b/account/templates/account/controls.html
@@ -23,7 +23,7 @@
     </style>
     <h1>Controls</h1>
      <div class="container">
-            <form method="post">
+            <form method="post" action="#">
                 {% csrf_token %}
                 <button type="submit" class="btn">PinOn</button>
                 <button type="submit" class="btn">PinOff</button>
